# function-gcp-image-vision

./: .gitignore  README.md  koyeb.yaml  pyproject.toml  template.yaml
.github/workflows/: main.yaml
gcp_image_vision/: __init__.py  processor.py
